# desktop-reminders

./: Cargo.toml  LICENSE
old/desktop-reminders/: Cargo.toml
old/desktop-reminders-backend-windows/: Cargo.toml
old/desktop-reminders-backend-windows/src/: backend.rs  lib.rs  state.rs  user_event.rs
old/desktop-reminders-core/: Cargo.toml
old/desktop-reminders-core/src/: components.rs
old/desktop-reminders-core/src/components/: bounds.rs  component.rs  context.rs  id.rs
old/desktop-reminders/src/: components.rs  main.rs  widgets.rs
old/desktop-reminders/src/components/: label.rs  reminder_list.rs
old/desktop-reminders/src/models/reminder/: reminder.rs
old/desktop-reminders/src/models/reminder/frequency/: daily.rs  days_of_week.rs  frequency.rs  month.rs  monthly.rs  once.rs  time_of_day.rs  weekly.rs  yearly.rs
old/desktop-reminders/src/widgets/: app.rs  config.rs  reminder.rs
old/desktop-reminders/src/widgets/config/: chrono.rs  config.rs
